ready to present

--- a/08_pipelined_RISC-V_core_LOAD_STORE/RISC-V_Core/web_visualizer/templates/index.html
+++ b/08_pipelined_RISC-V_core_LOAD_STORE/RISC-V_Core/web_visualizer/templates/index.html
@@ -27,8 +27,12 @@
     </div>
 
     <div class="sidebar">
-        <div class="panel-header">Pipeline Status</div>
-        <div class="panel-content" id="hazard-info">System Ready</div>
+        <div class="panel-box">
+            <h3>PIPELINE STATUS</h3>
+            <div id="hazard-list" style="min-height: 50px;">
+                System Ready... (Waiting for JS)
+            </div>
+        </div>
 
         <div class="panel-header">Register File (x0-x31)</div>
         <div class="reg-grid" id="reg-grid">
